# bag_processor

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: bag_processor.hpp  csv_parser.hpp  types.hpp
source/: bag_processor.cpp  csv_parser.cpp
